삼성전자 데이터 불러오는 부분

--- a/190907_ipywidgets_JunHyeong/intro_ipywidgets.ipynb
+++ b/190907_ipywidgets_JunHyeong/intro_ipywidgets.ipynb
@@ -12,6 +12,106 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 삼성전자의 일봉 데이터"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "            open_prc  high_prc  low_prc  close_prc  base_prc    volume\n",
+      "date                                                                  \n",
+      "1999-06-03     92000     92300    88100      91000     90300    994982\n",
+      "1999-06-04     91000     96000    91000      95000     91000   1042697\n",
+      "1999-06-07     98000    102000    96800     102000     95000   1155707\n",
+      "1999-06-08    102000    102500    98100      99500    102000    957041\n",
+      "1999-06-09     97000     98000    91500      91500     99500    726697\n",
+      "1999-06-10     93400    105000    93100     105000     91500   2087601\n",
+      "1999-06-11    105000    115500   102500     109000    105000   1969349\n",
+      "1999-06-14    106000    106000   100000     104500    109000    870005\n",
+      "1999-06-15    100000    108500   100000     103000    104500   1104861\n",
+      "1999-06-16    104000    115000   104000     114000    103000   1557300\n",
+      "1999-06-17    117000    129500   115000     115000    114000   2292345\n",
+      "1999-06-18    118000    123000   116000     119000    115000   1631519\n",
+      "1999-06-21    122000    129000   122000     129000    119000   1136161\n",
+      "1999-06-22    127500    130000   124000     128000    129000    998475\n",
+      "1999-06-23    125000    129500   124000     124000    128000    956212\n",
+      "1999-06-24    125000    128000   124000     124000    124000    852441\n",
+      "1999-06-25    120000    125000   119000     125000    124000    832874\n",
+      "1999-06-28    124500    134000   124500     131000    125000   1216380\n",
+      "1999-06-29    130000    130500   127000     127000    131000    901702\n",
+      "1999-06-30    127000    133500   122000     127000    127000   1642272\n",
+      "1999-07-01    129000    134000   127500     133000    127000   1064785\n",
+      "1999-07-02    133000    145000   130500     141000    133000   1533313\n",
+      "1999-07-05    145000    151500   139500     151000    141000   1227350\n",
+      "1999-07-06    150000    173500   148500     172000    151000   1323518\n",
+      "1999-07-07    169000    170000   158500     161500    172000   2116561\n",
+      "1999-07-08    162500    167500   151500     160000    161500   1756683\n",
+      "1999-07-09    160000    160000   152000     157000    160000   1393425\n",
+      "1999-07-12    156000    159000   149500     149500    157000   1090993\n",
+      "1999-07-13    146500    162500   146500     156500    149500   1627833\n",
+      "1999-07-14    157500    162000   155000     157000    156500   1251715\n",
+      "...              ...       ...      ...        ...       ...       ...\n",
+      "2019-07-16     46450     46850    46300      46850     46450   7407824\n",
+      "2019-07-17     46150     46350    45950      46050     46850   5216602\n",
+      "2019-07-18     46450     46450    45650      46100     46050   5143554\n",
+      "2019-07-19     46650     46950    46600      46800     46100   8819393\n",
+      "2019-07-22     46800     47300    46600      47200     46800   9009109\n",
+      "2019-07-23     47350     47550    47050      47300     47200   9061381\n",
+      "2019-07-24     47100     47150    46250      46400     47300   8756522\n",
+      "2019-07-25     47150     47200    46600      47200     46400   8408838\n",
+      "2019-07-26     46650     47150    46550      47150     47200   7873886\n",
+      "2019-07-29     46800     47050    46000      46100     47150   6856846\n",
+      "2019-07-30     46300     46850    46300      46550     46100   5551014\n",
+      "2019-07-31     46200     46600    45000      45350     46550  12872916\n",
+      "2019-08-01     44900     45500    44850      45200     45350   7811181\n",
+      "2019-08-02     44550     45500    44300      44950     45200  12151374\n",
+      "2019-08-05     44350     44600    43600      43950     44950  14214086\n",
+      "2019-08-06     42500     43800    42500      43500     43950  15083824\n",
+      "2019-08-07     43600     43900    43100      43200     43500  10002533\n",
+      "2019-08-08     43250     43500    42650      42650     43200  16926881\n",
+      "2019-08-09     43250     43350    43050      43150     42650   9685147\n",
+      "2019-08-12     44000     44000    43550      43700     43150   8466169\n",
+      "2019-08-13     43500     43500    42950      43000     43700   7276979\n",
+      "2019-08-14     43900     44250    43500      43700     43000   8750135\n",
+      "2019-08-16     43800     43900    43300      43900     43700   9528115\n",
+      "2019-08-19     44350     44350    43500      43600     43900   6014218\n",
+      "2019-08-20     43950     44600    43550      44450     43600   8434205\n",
+      "2019-08-21     44350     44800    44150      44500     44450   6571717\n",
+      "2019-08-22     44500     44700    43850      44050     44500   8061177\n",
+      "2019-08-23     43800     44200    43650      43950     44050   5017381\n",
+      "2019-08-26     43050     43800    42950      43600     43950   7954949\n",
+      "2019-08-27     43650     44200    43600      44050     43600  16883932\n",
+      "\n",
+      "[4999 rows x 6 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "date_parser = lambda x: pd.datetime.strptime(x, \"%Y-%m-%d\")\n",
+    "\n",
+    "daily_data = pd.read_csv(\n",
+    "    \"daily_005930.csv\",\n",
+    "    index_col=\"date\",\n",
+    "    parse_dates=True,\n",
+    "    date_parser=date_parser,\n",
+    "    encoding=\"euc_kr\"\n",
+    ")\n",
+    "\n",
+    "print(daily_data)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -35,7 +135,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
